# wasm-instrument

./: Cargo.toml  README.md
benches/: benches.rs
src/: lib.rs  utils.rs
src/gas_metering/: mod.rs  validation.rs
src/stack_limiter/: max_height.rs  mod.rs  thunk.rs
tests/: diff.rs  overhead.rs
tests/expectations/gas/: branch.wat  call.wat  ifs.wat  simple.wat
tests/expectations/stack-height/: empty_functions.wat  global.wat  imports.wat  multi_value_if.wat  simple.wat  start.wat  table.wat
tests/fixtures/stack-height/: multi_value_if.wat
